klipper/systemclipboard/waylandclipboard.h
@@ -10,11 +10,13 @@
 
 class DataControlDevice;
 class DataControlDeviceManager;
+class WlQueue;
 
 class WaylandClipboard : public SystemClipboard
 {
 public:
     WaylandClipboard(QObject *parent);
+    ~WaylandClipboard() override;
     void setMimeData(QMimeData *mime, QClipboard::Mode mode) override;
     void clear(QClipboard::Mode mode) override;
     const QMimeData *mimeData(QClipboard::Mode mode) const override;
@@ -22,4 +24,6 @@ public:
 private:
     std::unique_ptr<DataControlDeviceManager> m_manager;
     std::unique_ptr<DataControlDevice> m_device;
+    QThread *m_sourceThread;
+    WlQueue *m_sourceQueue;
 };
